--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "projects": [
+  "builds": [
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
@@ -10,13 +10,17 @@
     },
     {
       "src": "backend/app.py",
-      "use": "@vercel/python",
-      "routes": [
-        {
-          "src": "/api/(.*)",
-          "dest": "backend/app.py"
-        }
-      ]
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
     }
   ]
 }
