--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/dist"  // Update to the Vite output directory
+        "distDir": "frontend/dist"
       }
     },
     {
